--- a/adult.html
+++ b/adult.html
@@ -16,7 +16,7 @@
   .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
   .navbar .icon { flex: 1; text-align: right; }
 
-  /* Section Title */
+  /* Title */
   .section-title {
     font-size: 28px;
     font-weight: bold;
@@ -25,22 +25,23 @@
     letter-spacing: 1px;
   }
 
-  /* Netflix style movie row wrapper */
-  .movie-row-wrapper {
-    position: relative;
-    padding: 0 40px; /* space for arrows */
-  }
-
   /* Netflix style movie row */
   .movie-row {
     display: flex;
     overflow-x: auto;
     scroll-behavior: smooth;
     gap: 15px;
-    padding: 20px 0;
+    padding: 20px;
   }
 
-  .movie-row::-webkit-scrollbar { display: none; } /* hide scrollbar */
+  .movie-row::-webkit-scrollbar {
+    height: 8px;
+  }
+
+  .movie-row::-webkit-scrollbar-thumb {
+    background: #e50914;
+    border-radius: 4px;
+  }
 
   .movie-card {
     flex: 0 0 auto;
@@ -76,26 +77,7 @@
     text-align: center;
   }
 
-  /* Arrows */
-  .arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: rgba(0,0,0,0.6);
-    border: none;
-    color: #fff;
-    font-size: 30px;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 50%;
-    z-index: 20;
-    transition: background 0.3s;
-  }
-  .arrow:hover { background: rgba(229,9,20,0.8); }
-  .arrow-left { left: 0; }
-  .arrow-right { right: 0; }
-
-  /* Popup */
+  /* Popup (movie details) */
   #movie-popup { 
     position: fixed; top:0; left:0; width:100%; height:100%; 
     background: rgba(0,0,0,0.9); display:flex; justify-content:center; align-items:center; 
@@ -116,7 +98,6 @@
     .movie-card img { height: 240px; }
     .popup-content { width: 90%; }
     #popup-trailer { height:180px; }
-    .arrow { font-size: 24px; padding: 7px; }
   }
 </style>
 </head>
@@ -136,62 +117,58 @@
 <!-- Section Title -->
 <h2 class="section-title">Adult Movies</h2>
 
-<!-- Netflix Style Row with arrows -->
-<div class="movie-row-wrapper">
-  <button class="arrow arrow-left">&#10094;</button>
-  <div class="movie-row">
-    <div class="movie-card"
-         data-title="Action Hero"
-         data-summary="An intense action-packed movie for adults."
-         data-actors="Tom Cruise, Emily Blunt"
-         data-img="https://picsum.photos/400/300?random=5"
-         data-trailer="https://www.youtube.com/embed/5PSNL1qE6VY">
-      <img src="https://picsum.photos/400/300?random=5" alt="Action Hero">
-      <div class="movie-overlay">Action Hero</div>
-    </div>
-
-    <div class="movie-card"
-         data-title="Romantic Escape"
-         data-summary="A romantic story with thrilling adventures."
-         data-actors="Ryan Gosling, Emma Stone"
-         data-img="https://picsum.photos/400/300?random=6"
-         data-trailer="https://www.youtube.com/embed/3mE2KnZlFvk">
-      <img src="https://picsum.photos/400/300?random=6" alt="Romantic Escape">
-      <div class="movie-overlay">Romantic Escape</div>
-    </div>
-
-    <div class="movie-card"
-         data-title="Mystery Island"
-         data-summary="A group of friends explore a mysterious island."
-         data-actors="Chris Hemsworth, Natalie Portman"
-         data-img="https://picsum.photos/400/300?random=7"
-         data-trailer="https://www.youtube.com/embed/0U5v2nqj_EE">
-      <img src="https://picsum.photos/400/300?random=7" alt="Mystery Island">
-      <div class="movie-overlay">Mystery Island</div>
-    </div>
-
-    <div class="movie-card"
-         data-title="Thrill Night"
-         data-summary="A suspense thriller full of twists and surprises."
-         data-actors="Scarlett Johansson, Robert Downey Jr."
-         data-img="https://picsum.photos/400/300?random=8"
-         data-trailer="https://www.youtube.com/embed/dQw4w9WgXcQ">
-      <img src="https://picsum.photos/400/300?random=8" alt="Thrill Night">
-      <div class="movie-overlay">Thrill Night</div>
-    </div>
-
-    <div class="movie-card"
-         data-title="Silent Shadow"
-         data-summary="A mysterious killer lurks in the dark alleys."
-         data-actors="Keanu Reeves, Charlize Theron"
-         data-img="https://picsum.photos/400/300?random=9"
-         data-trailer="https://www.youtube.com/embed/2AUmvWm5ZDQ">
-      <img src="https://picsum.photos/400/300?random=9" alt="Silent Shadow">
-      <div class="movie-overlay">Silent Shadow</div>
-    </div>
+<!-- Netflix Style Row -->
+<section class="movie-row">
+  <div class="movie-card"
+       data-title="Action Hero"
+       data-summary="An intense action-packed movie for adults."
+       data-actors="Tom Cruise, Emily Blunt"
+       data-img="https://picsum.photos/400/300?random=5"
+       data-trailer="https://www.youtube.com/embed/5PSNL1qE6VY">
+    <img src="https://picsum.photos/400/300?random=5" alt="Action Hero">
+    <div class="movie-overlay">Action Hero</div>
   </div>
-  <button class="arrow arrow-right">&#10095;</button>
-</div>
+
+  <div class="movie-card"
+       data-title="Romantic Escape"
+       data-summary="A romantic story with thrilling adventures."
+       data-actors="Ryan Gosling, Emma Stone"
+       data-img="https://picsum.photos/400/300?random=6"
+       data-trailer="https://www.youtube.com/embed/3mE2KnZlFvk">
+    <img src="https://picsum.photos/400/300?random=6" alt="Romantic Escape">
+    <div class="movie-overlay">Romantic Escape</div>
+  </div>
+
+  <div class="movie-card"
+       data-title="Mystery Island"
+       data-summary="A group of friends explore a mysterious island."
+       data-actors="Chris Hemsworth, Natalie Portman"
+       data-img="https://picsum.photos/400/300?random=7"
+       data-trailer="https://www.youtube.com/embed/0U5v2nqj_EE">
+    <img src="https://picsum.photos/400/300?random=7" alt="Mystery Island">
+    <div class="movie-overlay">Mystery Island</div>
+  </div>
+
+  <div class="movie-card"
+       data-title="Thrill Night"
+       data-summary="A suspense thriller full of twists and surprises."
+       data-actors="Scarlett Johansson, Robert Downey Jr."
+       data-img="https://picsum.photos/400/300?random=8"
+       data-trailer="https://www.youtube.com/embed/dQw4w9WgXcQ">
+    <img src="https://picsum.photos/400/300?random=8" alt="Thrill Night">
+    <div class="movie-overlay">Thrill Night</div>
+  </div>
+
+  <div class="movie-card"
+       data-title="Silent Shadow"
+       data-summary="A mysterious killer lurks in the dark alleys."
+       data-actors="Keanu Reeves, Charlize Theron"
+       data-img="https://picsum.photos/400/300?random=9"
+       data-trailer="https://www.youtube.com/embed/2AUmvWm5ZDQ">
+    <img src="https://picsum.photos/400/300?random=9" alt="Silent Shadow">
+    <div class="movie-overlay">Silent Shadow</div>
+  </div>
+</section>
 
 <!-- Popup -->
 <div id="movie-popup">
@@ -215,7 +192,6 @@
   const popupTrailer = document.getElementById('popup-trailer');
   const closeBtn = document.querySelector('.close-btn');
 
-  // Open popup
   movieCards.forEach(card => {
     card.addEventListener('click', () => {
       popupImg.src = card.dataset.img;
@@ -227,23 +203,9 @@
     });
   });
 
-  // Close popup
   closeBtn.addEventListener('click', () => {
     popup.style.display = "none";
     popupTrailer.src = "";
-  });
-
-  // Arrow scrolling
-  const movieRow = document.querySelector('.movie-row');
-  const leftArrow = document.querySelector('.arrow-left');
-  const rightArrow = document.querySelector('.arrow-right');
-
-  leftArrow.addEventListener('click', () => {
-    movieRow.scrollBy({ left: -300, behavior: 'smooth' });
-  });
-
-  rightArrow.addEventListener('click', () => {
-    movieRow.scrollBy({ left: 300, behavior: 'smooth' });
   });
 </script>
 
